--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,14 @@
 	font-family: "play-fair-display";
 	src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
 }
+
+.kumpulangambar {}
+
+.kotak img {
+	width: 100%
+}
+
+.kotak {
+	position: relative;
+
+}
