--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+	--primary-clr: #fff;
+	--secondary-clr: #029e9d;
+	--tertiary-clr: #fdc703;
+	--accent-clr: #777777;
+}
+
 * {
 	font-family: "poppins-regular";
 }
@@ -10,4 +17,30 @@
 @font-face {
 	font-family: "play-fair-display";
 	src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
+}
+
+@media screen and (min-width: 992px) {
+	.dropdown-menu li {
+		position: relative;
+	}
+	.dropdown-menu .dropdown__submenu {
+		display: none;
+		position: absolute;
+		left: 100%;
+		top: -7px;
+	}
+	.dropdown-menu .dropdown-submenu-left {
+		right: 100%;
+		left: auto;
+	}
+	/* .dropdown-menu > li:hover > .dropdown__submenu {
+		display: block;
+	} */
+	/* li:hover > .dropdown-menu {
+		display: block;
+	} */
+}
+
+li:focus > .dropdown__submenu {
+	display: block;
 }
