--- a/css/style.css
+++ b/css/style.css
@@ -12,24 +12,19 @@
 	src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
 }
 
-h5,
-h2 {
-	font-family: "play-fair-display";
+.kumpulangambar {
+	position: relative;
 }
 
-
-.tur-guide .card {
-	background-color: #029e9d;
-	color: white;
+.kotak {
+	position: relative;
 }
-
-.Judultur-guide {
-	color: #029e9d;
-	font-family: "play-fair-display";
+.kotak img {
+	width: 100%;
+	object-fit: cover;
 }
-
-
-.warnatur-guide {
-	color: #fdc703;
-	font-family: "play-fair-display";
+.top-lokasi-txt {
+	position: absolute;
+	z-index: 2;
+	top: 0;
 }
