--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .kumpulangambar {
-	position: relative;
+	overflow: hidden;
 }
 
 .kotak {
@@ -21,10 +21,14 @@
 }
 .kotak img {
 	width: 100%;
-	object-fit: cover;
+	border-radius: 10px;
 }
 .top-lokasi-txt {
+	display: flex;
 	position: absolute;
 	z-index: 2;
-	top: 0;
+	bottom: 0;
+}
+.col {
+	background-color: blue;
 }
