--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ h2 {
 
 
 .tur-guide .card {
-	background-color: #029e9d;
 	color: white;
+	border: transparent;
 }
 
 .Judultur-guide {
@@ -32,4 +32,29 @@ h2 {
 .warnatur-guide {
 	color: #fdc703;
 	font-family: "play-fair-display";
+}
+
+.img-hover {
+	overflow: hidden;
+	transition: 5s ease-in-out;
+}
+
+.img-hover .card-img-top {
+	transition: 500ms ease-in-out;
+}
+
+.card-body {
+	transition: bottom 400ms ease-in-out;
+	background-color: #029e9d;
+	border-radius: 0 0 0.375rem 0.375rem;
+	transform: translateY(0);
+	transition: transform 500ms ease-in-out;
+}
+
+.card:hover .card-body {
+	transform: translateY(-2rem);
+}
+
+.img-hover:hover .card-img-top {
+	transform: scale(1.2);
 }
