--- a/css/style.css
+++ b/css/style.css
@@ -17,22 +17,21 @@ h2,
 h3 {
 	font-family: "play-fair-display";
 }
+spect-ratio: 16 / 9;
+}
 
 .Judultur-guide {
 	color: #029e9d;
 	font-family: "play-fair-display";
-
 }
 
 .warna-biru-biasa {
 	color: #029e9d;
-
 }
 
 .warnatur-guide,
 .fa-star {
 	color: #fdc703;
-
 }
 
 .kumpulangambar {
@@ -66,27 +65,26 @@ h3 {
 
 .paket-tur .container {
 	gap: 3.5rem;
-
 }
 
-.karoselgambar-paket .card::after {
+.underline-animate::after {
 	content: "";
 	background-color: #029e9d;
 	width: 0;
-	border-radius: 0.375rem;
+	border-radius: 0 0 0.375rem 0.375rem;
 	height: 3px;
 	transition: 200ms ease-in-out;
 }
 
-.karoselgambar-paket .card .card-title {
+.underline-animate {
 	transition: 200ms ease-in-out;
 }
 
-.karoselgambar-paket .card .card-title:hover {
+.karoselgambar-paket .card-title:hover {
 	color: #029e9d;
 }
 
-.karoselgambar-paket .card:hover::after {
+.underline-animate:hover::after {
 	width: 100%;
 }
 
@@ -123,16 +121,19 @@ h3 {
 	color: white;
 }
 
+.slick-slide {
+	margin: 0 1rem;
+}
+.slick-list {
+	margin: 0 -1rem;
+}
+
 .kategoricon {
 	border-radius: 0.375rem;
-	margin-inline: 1rem;
 	text-align: center;
-	padding: 0.5rem;
 	background-color: white;
 	display: flex !important;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 }
 
 .kategoricon p {
