--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,26 @@
 	src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
 }
 
-h5,
 h2,
-h3 {
+h3,
+h5,
+h6 {
 	font-family: "play-fair-display";
 }
-spect-ratio: 16 / 9;
+
+@media screen and (max-width: 991px) {
+	.paket-tur-judul {
+		text-align: center;
+	}
+	.karoselarrow {
+		display: none;
+	}
+	.judulkategori h3 {
+		padding-block: 2rem !important	;
+	}
+	.kategoricon img {
+		width: 50% !important;
+	}
 }
 
 .Judultur-guide {
@@ -80,18 +94,53 @@ spect-ratio: 16 / 9;
 	transition: 200ms ease-in-out;
 }
 
+.underline-animate:hover::after {
+	width: 100%;
+}
+
 .karoselgambar-paket .card-title:hover {
 	color: #029e9d;
 }
 
-.underline-animate:hover::after {
-	width: 100%;
+.karoselarrow {
+	width: 2.5%;
+	right: 5%;
+}
+
+.slick-prev::before {
+	font-family: "FontAwesome"; /* Use the correct font-family for your icon set */
+	content: "\f104"; /* Left arrow icon in Font Awesome */
+	font-size: 24px; /* Adjust size if needed */
+}
+
+.slick-next::before {
+	font-family: "FontAwesome";
+	content: "\f105"; /* Right arrow icon in Font Awesome */
+	font-size: 24px;
+}
+
+.slick-prev::before,
+.slick-next::before {
+	border-radius: 5px;
+	padding: 0.5rem 1rem;
+	background-color: #fff;
+	color: #000;
+	font-size: 1.7rem;
+	transition: 200ms ease-in-out; /* This controls the arrow icon size */
+}
+
+.slick-arrow:hover.slick-prev::before,
+.slick-arrow:focus.slick-prev::before,
+.slick-arrow:focus.slick-next::before,
+.slick-arrow:hover.slick-next::before {
+	background-color: #029e9d;
+	color: #fff;
 }
 
 .hari {
 	position: absolute;
 	right: 5%;
-	bottom: 47%;
+	top: -10%;
 	background-color: #029e9d;
 	padding: 0.5rem 1rem;
 	color: white;
@@ -135,13 +184,18 @@ spect-ratio: 16 / 9;
 	display: flex !important;
 	flex-direction: column;
 }
+.kategoricon img {
+	padding: 1rem;
+	width: 70%;
+}
 
-.kategoricon p {
+.kategoricon h6 {
+	padding-bottom: 1rem;
 	font-size: 1.2rem;
 	margin: 0;
 	transition: 200ms ease-in-out;
 }
 
-.kategoricon p:hover {
+.kategoricon h6:hover {
 	color: #029e9d;
 }
