--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,9 @@ h3 {
 	transition: 5s ease-in-out;
 }
 
-.img-hover .card-img-top {
-	transition: 500ms ease-in-out;
+.img-hover {
+	overflow: hidden;
+	transition: 5s ease-in-out;
 }
 
 .card-body {
@@ -143,4 +144,14 @@ h3 {
 
 .kategoricon p:hover {
 	color: #029e9d;
+}
+
+
+.judulkategori.card::after {
+	content: "";
+	background-color: #029e9d;
+	width: 0;
+	border-radius: 0.375rem;
+	height: 3px;
+	transition: 200ms ease-in-out;
 }
