--- a/scss/custom.css
+++ b/scss/custom.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root,
 [data-bs-theme=light] {
-  --bs-blue: #029e9d;
+  --bs-blue: #18243f;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
@@ -10,7 +10,7 @@
   --bs-yellow: #ffc107;
   --bs-green: #198754;
   --bs-teal: #20c997;
-  --bs-cyan: #0dcaf0;
+  --bs-cyan: #029e9d;
   --bs-black: #000;
   --bs-white: #fff;
   --bs-gray: #6c757d;
@@ -24,42 +24,42 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #029e9d;
+  --bs-primary: #18243f;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
-  --bs-info: #0dcaf0;
+  --bs-info: #029e9d;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 2, 158, 157;
+  --bs-primary-rgb: 24, 36, 63;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
-  --bs-info-rgb: 13, 202, 240;
+  --bs-info-rgb: 2, 158, 157;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
-  --bs-primary-text-emphasis: #013f3f;
+  --bs-primary-text-emphasis: #0a0e19;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
-  --bs-info-text-emphasis: #055160;
+  --bs-info-text-emphasis: #013f3f;
   --bs-warning-text-emphasis: #664d03;
   --bs-danger-text-emphasis: #58151c;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
-  --bs-primary-bg-subtle: #cceceb;
+  --bs-primary-bg-subtle: #d1d3d9;
   --bs-secondary-bg-subtle: #e2e3e5;
   --bs-success-bg-subtle: #d1e7dd;
-  --bs-info-bg-subtle: #cff4fc;
+  --bs-info-bg-subtle: #cceceb;
   --bs-warning-bg-subtle: #fff3cd;
   --bs-danger-bg-subtle: #f8d7da;
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
-  --bs-primary-border-subtle: #9ad8d8;
+  --bs-primary-border-subtle: #a3a7b2;
   --bs-secondary-border-subtle: #c4c8cb;
   --bs-success-border-subtle: #a3cfbb;
-  --bs-info-border-subtle: #9eeaf9;
+  --bs-info-border-subtle: #9ad8d8;
   --bs-warning-border-subtle: #ffe69c;
   --bs-danger-border-subtle: #f1aeb5;
   --bs-light-border-subtle: #e9ecef;
@@ -88,11 +88,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #029e9d;
-  --bs-link-color-rgb: 2, 158, 157;
+  --bs-link-color: #18243f;
+  --bs-link-color-rgb: 24, 36, 63;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #027e7e;
-  --bs-link-hover-color-rgb: 2, 126, 126;
+  --bs-link-hover-color: #131d32;
+  --bs-link-hover-color-rgb: 19, 29, 50;
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: #fff3cd;
@@ -113,7 +113,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(2, 158, 157, 0.25);
+  --bs-focus-ring-color: rgba(24, 36, 63, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -136,35 +136,35 @@
   --bs-tertiary-color-rgb: 222, 226, 230;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
-  --bs-primary-text-emphasis: #67c5c4;
+  --bs-primary-text-emphasis: #747c8c;
   --bs-secondary-text-emphasis: #a7acb1;
   --bs-success-text-emphasis: #75b798;
-  --bs-info-text-emphasis: #6edff6;
+  --bs-info-text-emphasis: #67c5c4;
   --bs-warning-text-emphasis: #ffda6a;
   --bs-danger-text-emphasis: #ea868f;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
-  --bs-primary-bg-subtle: #00201f;
+  --bs-primary-bg-subtle: #05070d;
   --bs-secondary-bg-subtle: #161719;
   --bs-success-bg-subtle: #051b11;
-  --bs-info-bg-subtle: #032830;
+  --bs-info-bg-subtle: #00201f;
   --bs-warning-bg-subtle: #332701;
   --bs-danger-bg-subtle: #2c0b0e;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
-  --bs-primary-border-subtle: #015f5e;
+  --bs-primary-border-subtle: #0e1626;
   --bs-secondary-border-subtle: #41464b;
   --bs-success-border-subtle: #0f5132;
-  --bs-info-border-subtle: #087990;
+  --bs-info-border-subtle: #015f5e;
   --bs-warning-border-subtle: #997404;
   --bs-danger-border-subtle: #842029;
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: #67c5c4;
-  --bs-link-hover-color: #85d1d0;
-  --bs-link-color-rgb: 103, 197, 196;
-  --bs-link-hover-color-rgb: 133, 209, 208;
+  --bs-link-color: #747c8c;
+  --bs-link-hover-color: #9096a3;
+  --bs-link-color-rgb: 116, 124, 140;
+  --bs-link-hover-color-rgb: 144, 150, 163;
   --bs-code-color: #e685b5;
   --bs-highlight-color: #dee2e6;
   --bs-highlight-bg: #664d03;
@@ -1852,7 +1852,7 @@ progress {
 }
 
 .text-bg-primary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -1896,8 +1896,8 @@ progress {
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: RGBA(53, 177, 177, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(53, 177, 177, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(19, 29, 50, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(19, 29, 50, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-secondary {
@@ -1923,8 +1923,8 @@ progress {
   text-decoration-color: RGBA(var(--bs-info-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-info:hover, .link-info:focus {
-  color: RGBA(61, 213, 243, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(61, 213, 243, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(53, 177, 177, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(53, 177, 177, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-warning {
@@ -2179,8 +2179,8 @@ progress {
 }
 
 .btn {
-  --bs-btn-padding-x: 0.75rem;
-  --bs-btn-padding-y: 0.375rem;
+  --bs-btn-padding-x: 1.2rem;
+  --bs-btn-padding-y: 0.8rem;
   --bs-btn-font-family: ;
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
@@ -2260,20 +2260,20 @@ progress {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #029e9d;
-  --bs-btn-border-color: #029e9d;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #28adac;
-  --bs-btn-hover-border-color: #1ba8a7;
-  --bs-btn-focus-shadow-rgb: 2, 134, 133;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #35b1b1;
-  --bs-btn-active-border-color: #1ba8a7;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #18243f;
+  --bs-btn-border-color: #18243f;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #141f36;
+  --bs-btn-hover-border-color: #131d32;
+  --bs-btn-focus-shadow-rgb: 59, 69, 92;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #131d32;
+  --bs-btn-active-border-color: #121b2f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #029e9d;
-  --bs-btn-disabled-border-color: #029e9d;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #18243f;
+  --bs-btn-disabled-border-color: #18243f;
 }
 
 .btn-secondary {
@@ -2312,19 +2312,19 @@ progress {
 
 .btn-info {
   --bs-btn-color: #000;
-  --bs-btn-bg: #0dcaf0;
-  --bs-btn-border-color: #0dcaf0;
+  --bs-btn-bg: #029e9d;
+  --bs-btn-border-color: #029e9d;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #31d2f2;
-  --bs-btn-hover-border-color: #25cff2;
-  --bs-btn-focus-shadow-rgb: 11, 172, 204;
+  --bs-btn-hover-bg: #28adac;
+  --bs-btn-hover-border-color: #1ba8a7;
+  --bs-btn-focus-shadow-rgb: 2, 134, 133;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #3dd5f3;
-  --bs-btn-active-border-color: #25cff2;
+  --bs-btn-active-bg: #35b1b1;
+  --bs-btn-active-border-color: #1ba8a7;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #0dcaf0;
-  --bs-btn-disabled-border-color: #0dcaf0;
+  --bs-btn-disabled-bg: #029e9d;
+  --bs-btn-disabled-border-color: #029e9d;
 }
 
 .btn-warning {
@@ -2396,19 +2396,19 @@ progress {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #029e9d;
-  --bs-btn-border-color: #029e9d;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #029e9d;
-  --bs-btn-hover-border-color: #029e9d;
-  --bs-btn-focus-shadow-rgb: 2, 158, 157;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #029e9d;
-  --bs-btn-active-border-color: #029e9d;
+  --bs-btn-color: #18243f;
+  --bs-btn-border-color: #18243f;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #18243f;
+  --bs-btn-hover-border-color: #18243f;
+  --bs-btn-focus-shadow-rgb: 24, 36, 63;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #18243f;
+  --bs-btn-active-border-color: #18243f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #029e9d;
+  --bs-btn-disabled-color: #18243f;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #029e9d;
+  --bs-btn-disabled-border-color: #18243f;
   --bs-gradient: none;
 }
 
@@ -2447,19 +2447,19 @@ progress {
 }
 
 .btn-outline-info {
-  --bs-btn-color: #0dcaf0;
-  --bs-btn-border-color: #0dcaf0;
+  --bs-btn-color: #029e9d;
+  --bs-btn-border-color: #029e9d;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #0dcaf0;
-  --bs-btn-hover-border-color: #0dcaf0;
-  --bs-btn-focus-shadow-rgb: 13, 202, 240;
+  --bs-btn-hover-bg: #029e9d;
+  --bs-btn-hover-border-color: #029e9d;
+  --bs-btn-focus-shadow-rgb: 2, 158, 157;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #0dcaf0;
-  --bs-btn-active-border-color: #0dcaf0;
+  --bs-btn-active-bg: #029e9d;
+  --bs-btn-active-border-color: #029e9d;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #0dcaf0;
+  --bs-btn-disabled-color: #029e9d;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #0dcaf0;
+  --bs-btn-disabled-border-color: #029e9d;
   --bs-gradient: none;
 }
 
@@ -2543,7 +2543,7 @@ progress {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 2, 134, 133;
+  --bs-btn-focus-shadow-rgb: 59, 69, 92;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -2623,8 +2623,8 @@ progress {
 }
 
 .dropdown-toggle-split {
-  padding-right: 0.5625rem;
-  padding-left: 0.5625rem;
+  padding-right: 0.9rem;
+  padding-left: 0.9rem;
 }
 .dropdown-toggle-split::after, .dropup .dropdown-toggle-split::after, .dropend .dropdown-toggle-split::after {
   margin-left: 0;
@@ -3129,7 +3129,7 @@ progress {
 }
 .nav-link:focus-visible {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(2, 158, 157, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(24, 36, 63, 0.25);
 }
 .nav-link.disabled, .nav-link:disabled {
   color: var(--bs-nav-link-disabled-color);
@@ -3172,7 +3172,7 @@ progress {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #029e9d;
+  --bs-nav-pills-link-active-bg: #18243f;
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -3275,7 +3275,7 @@ progress {
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #029e9d;
+  --bs-dropdown-link-active-bg: #18243f;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3541,7 +3541,7 @@ progress {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #029e9d;
+  --bs-dropdown-link-active-bg: #18243f;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
