--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
 	src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
 }
 
+.font-play {
+	font-family: play-fair-display;
+}
+
 .kumpulangambar {
 	position: relative;
 }
@@ -50,10 +54,52 @@
 	transition: transform 500ms ease-in-out;
 }
 
-.card:hover .card-body {
+.card:hover .zoom-animate {
 	transform: translateY(-2rem);
 }
 
 .img-hover:hover .card-img-top {
 	transform: scale(1.2);
+}
+
+.spasi {
+	width: 100%;
+	height: 50px;
+}
+
+.underline-animate::after {
+	content: "";
+	background-color: #029e9d;
+	width: 0;
+	border-radius: 0 0 0.375rem 0.375rem;
+	height: 3px;
+	transition: 200ms ease-in-out;
+}
+
+.underline-animate {
+	transition: 200ms ease-in-out;
+}
+
+.underline-animate:hover::after {
+	width: 100%;
+}
+
+.text-animate:hover {
+	color: #029e9d;
+}
+
+.slick-slide {
+	margin-inline: 1rem;
+}
+
+.slick-list {
+	margin-inline: -1rem;
+}
+
+.slick-item {
+	background-color: #e1e1e127;
+}
+
+.slick-item img {
+	width: inherit;
 }
